--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
@@ -135,220 +135,7 @@
   </div>
 </div>
 
-<h2 id="schools-overview" class="display-4" padding>Prehľad škôl v krajine</h2>
-
-<div class="schoolMap">
-
-  <div class="schoolMap__filter" flex margin-bottom>
-    <select
-      [(ngModel)]="schoolsToShow"
-      class="custom-select"
-      name="schoolsToShow"
-      margin-right
-      (change)="filterSchools($event)"
-    >
-      <option value="all">Všetky školy</option>
-      <option value="some">Máme prihlášky</option>
-      <option value="none">Nemáme prihlášky</option>
-    </select>
-
-    <select
-      [(ngModel)]="schoolQuality"
-      class="custom-select"
-      name="schoolQuality"
-      margin-right
-      (change)="filterSchools($event)"
-    >
-      <option value="all">Všetky</option>
-      <option value="high">Výborné výsledky žiakov</option>
-      <option value="medium">Priemerné výsledky žiakov</option>
-      <option value="low">Zlé výsledky žiakov</option>
-      <option value="none">Neuvedené</option>
-    </select>
-
-    <input
-      [(ngModel)]="filteredSchoolId"
-      class="form-control"
-      placeholder="Kód školy"
-      type="text"
-      (ngModelChange)="onFilterSchoolsBySchoolId($event)"
-    >
-    <input
-      [(ngModel)]="filteredSchoolStreet"
-      class="form-control"
-      placeholder="Ulica školy"
-      type="text"
-      margin-left
-      (ngModelChange)="onFilterSchoolsByStreet($event)"
-    >
-  </div>
-
-  <div *ngIf="chartsLoaded" flex>
-    <app-map
-      [markers]="filteredSchools"
-      [height]="600"
-      (selectMarker)="onSchoolChoose($event)"
-    ></app-map>
-    <div
-      *ngIf="chosenSchool"
-      class="schoolMap__schoolDetail"
-      padding
-    >
-      <div class="schoolMap__schoolDetail__closeButton" (click)="closeChosenSchoolWindow()">
-          <i class="fas fa-times"></i>
-      </div>
-      <h3>{{ chosenSchool.nazov }}</h3>
-      <hr>
-      <table class="table table-borderless table-sm">
-        <thead>
-          <tr>
-            <th colspan="2" scope="col">Všeobecné informácie o škole</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">Kód školy</th>
-            <td>{{ chosenSchool.kod_kodsko }}</td>
-          </tr>
-          <tr>
-            <th scope="row">Typ školy</th>
-            <td>{{ chosenSchool.typ_skoly }}</td>
-          </tr>
-          <tr>
-            <th scope="row">Email</th>
-            <td>{{ chosenSchool.email }}</td>
-          </tr>
-          <tr>
-            <th scope="row">Počet prihlášok z danej školy</th>
-            <td>{{ chosenSchool.admissions.data.length }}</td>
-          </tr>
-          <tr>
-            <th scope="row">Celkové hodnotenie školy</th>
-            <td>{{ chosenSchool.celkove_hodnotenie ? chosenSchool.celkove_hodnotenie : 'Neuvedené' }}</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <app-chart
-        *ngIf="chosenSchool.admissions.data.length"
-        [legend]="false"
-        [type]="'bar'"
-        [data]="[chosenSchool.beganStudy, chosenSchool.approved, chosenSchool.rejected]"
-        [labels]="['Nastúpený', 'Prijatý', 'Neprijatý']"
-      ></app-chart>
-    </div>
-  </div>
-
-  <div *ngIf="chosenSchool && chosenSchool.admissions.data.length" margin-top>
-    <table mat-table matSort [dataSource]="chosenSchool.admissions" full-width>
-      <ng-container [matColumnDef]="column" *ngFor="let column of displayedAdmissionsColumns">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
-        <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="Rozh" stickyEnd>
-        <th mat-header-cell *matHeaderCellDef> Rozhodnutie o prijatí </th>
-        <td [ngStyle]="{ color: element.Rozh > 9 && element.Rozh < 20 ? 'green' : 'red' }" mat-cell *matCellDef="let element">
-          {{ isAccepted(element.Rozh) }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="Akcie" stickyEnd>
-        <th mat-header-cell *matHeaderCellDef> Akcie </th>
-        <td mat-cell *matCellDef="let element">
-          <button class="btn btn-primary" [routerLink]="['bachelor', element.id]" no-margin>Detail</button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="_displayedColumnsAndActions()"></tr>
-      <tr mat-row *matRowDef="let row; columns: _displayedColumnsAndActions();"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons #paginator></mat-paginator>
-  </div>
-
-  <div
-    *ngIf="chosenSchool && !chosenSchool.admissions.data.length"
-    margin-top
-    text-center
-  >
-    <hr>
-    Z tejto školy zatiaľ neexistujú žiadne prihlášky.
-  </div>
-
-</div>
-
-<h2 id="origin" class="display-4" padding>Pôvod študentov</h2>
-
-<app-map
-  *ngIf="chartsLoaded"
-  [markers]="filteredAdmissions"
-  [height]="500"
-  [showHeatMap]="true"
-  [showMarkers]="false"
-></app-map>
-
-<h3 id="abroadStudents" margin-top>Zahraničné prihlášky</h3>
-<hr>
-
-<div class="row">
-  <div class="col-lg-6">
-    <table class="table table-sm">
-      <thead>
-        <tr>
-          <th scope="col">Program</th>
-          <th scope="col">Všetci</th>
-          <th scope="col">Prijatý</th>
-          <th scope="col">Neprijatý</th>
-          <th scope="col">Nastúpený</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let programme of abroadAdmissions.programmes | keyvalue">
-          <th scope="row">{{ programme.key }}</th>
-          <td>{{ programme.value.count }}</td>
-          <td>{{ programme.value.approved }}</td>
-          <td>{{ programme.value.rejected }}</td>
-          <td>{{ programme.value.beganStudy }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="col-lg-6">
-    <app-chart
-      *ngIf="abroadAdmissions.admissions"
-      [title]="'Počet prihlásených, prijatých, neprijatých a nastúpených študentov zo zahraničia'"
-      [data]="[abroadAdmissions.admissions.length, abroadAdmissions.approved, abroadAdmissions.rejected, abroadAdmissions.beganStudy]"
-      [labels]="['Prihlásený', 'Prijatý', 'Neprijatý', 'Nastúpený']"
-      [type]="'bar'"
-      [legend]="false"
-    ></app-chart>
-  </div>
-</div>
-
-<h2 id="regions" class="display-4" padding>Regióny</h2>
-
-<div class="row">
-  <div class="col-lg-5">
-    <app-geo-chart *ngIf="filteredAdmissions.length" [data]="filteredAdmissions"></app-geo-chart>
-  </div>
-  <div class="col-lg-7">
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Kraj</th>
-          <th scope="col">Medián</th>
-          <th scope="col">Priemer bodov</th>
-          <th scope="col">Počet prihlášok</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let region of regionMetrics | keyvalue">
-          <th scope="row">{{ region.value.kraj }}</th>
-          <td>{{ region.value.median }}</td>
-          <td>{{ region.value.mean | number:'2.2-2' }}</td>
-          <td>{{ region.value.count }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+<app-schools-overview [schools]="schools"></app-schools-overview>
+<app-students-origin [admissions]="filteredAdmissions"></app-students-origin>
+<app-abroad-students [admissions]="filteredAdmissions"></app-abroad-students>
+<app-regions [admissions]="filteredAdmissions" [regionMetrics]="regionMetrics"></app-regions>
