admission detail refactored to components

--- a/bakalarka-frontend/src/app/pages/admissions/admission/admission.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admission/admission.component.html
@@ -1,7 +1,7 @@
 <div flex justify-content-between align-items-center>
   <h1 class="display-3">Prihláška - <strong>{{ admission.Meno }} {{ admission.Priezvisko }}</strong></h1>
   <div flex>
-    <h1 *ngIf="otherAdmissions" class="display-3 admissions-count"><span class="text-muted" style="font-size: 16px;">Počet prihlášok tohto uchádzača:</span> {{ otherAdmissions.data.length }} </h1>
+    <h1 *ngIf="otherAdmissions" class="display-3 admissions-count"><span class="text-muted" style="font-size: 16px;">Počet prihlášok tohto uchádzača:</span> {{ otherAdmissions.length }} </h1>
 
     <button
       class="btn btn-raised btn-primary"
@@ -12,222 +12,6 @@
 </div>
 <hr>
 
-<div class="row">
-  <div class="col-lg-6">
-
-    <table #table1 class="table table-borderless table-sm">
-      <thead>
-        <tr>
-          <th colspan="2" scope="col">Informácie o prihláške</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">Študijný program</th>
-          <td>{{ admission['Program_2'] }}</td>
-        </tr>
-        <tr>
-          <th scope="row">Predošlá vysoká škola</th>
-          <td *ngIf="admission['Absolvovaná_VŠ']">{{ admission['Absolvovaná_VŠ'] }} ({{ admission['Abs_VŠ'] }})</td>
-          <td *ngIf="!admission['Absolvovaná_VŠ']">Žiadna</td>
-        </tr>
-        <tr [ngClass]="{ 'table-success': admission.Rozh != 45, 'table-danger': admission.Rozh > 20 }">
-          <th scope="row">Rozhodnutie o prijatí</th>
-          <td>{{ admission['Rozhodnutie_o_prijatí'] }}</td>
-        </tr>
-        <tr *ngIf="admission['Prijatie_na_program']" class="table-success">
-          <th scope="row">Prijatie na program</th>
-          <td>{{ admission['Prijatie_na_program'] }}</td>
-        </tr>
-        <tr
-          [ngClass]="{ 'table-success': admission['Štúdium'] == 'áno', 'table-danger': admission['Štúdium'] == 'nie' }"
-          class="table-success"
-        >
-          <th scope="row">Nastúpil uchádzač na fakultu?</th>
-          <td>{{ admission['Štúdium'] }}</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <table #table2 class="table table-borderless table-sm">
-      <thead>
-        <tr>
-          <th colspan="2" scope="col">Osobné informácie</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">Rodné číslo</th>
-          <td>{{ admission['Rodné_číslo'] }}</td>
-        </tr>
-        <tr>
-          <th scope="row">Občianstvo</th>
-          <td>{{ admission['Občianstvo'] }}</td>
-        </tr>
-        <tr>
-          <th scope="row">Maturoval v roku</th>
-          <td>{{ admission['Maturita_1'] }}</td>
-        </tr>
-        <tr>
-          <th scope="row">Dátum a miesto narodenia</th>
-          <td>{{ admission.Narodenie }} ({{ admission.Miesto_narodenia }})</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <table class="table table-borderless table-sm">
-      <thead>
-        <tr>
-          <th colspan="2" scope="col">Kontaktné informácie</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">Telefónne číslo</th>
-          <td>{{ admission['Kontaktný_tel'] }}</td>
-        </tr>
-        <tr>
-          <th scope="row">Email</th>
-          <td>{{ admission.E_mail }}</td>
-        </tr>
-        <tr>
-          <th scope="row">Adresa</th>
-          <td>{{ admission.Kont_adresa_ulica }}</td>
-        </tr>
-        <tr>
-          <th scope="row">Mesto</th>
-          <td>{{ admission.Kont_adresa_obec }} ({{ admission['PSČ'] }})</td>
-        </tr>
-      </tbody>
-    </table>
-
-  </div>
-  <div class="col-lg-6">
-    <app-chart
-      *ngIf="admission['Externá_maturita_z_cudzieho_jazyka_ECJ'] || admission['Externá_maturita_z_matematiky_EM'] || admission['Písomný_test_z_matematiky_SCIO_PTM'] || admission['Všeobecné_študijné_predpoklady_SCIO_VŠP'] || admission['Body_celkom']"
-      [title]="'Body v prijímacom konaní podľa typu testu, ktorý uchádzač absolvoval'"
-      [data]="[admission['Externá_maturita_z_cudzieho_jazyka_ECJ'], admission['Externá_maturita_z_matematiky_EM'], admission['Písomný_test_z_matematiky_SCIO_PTM'], admission['Všeobecné_študijné_predpoklady_SCIO_VŠP'], admission['Body_celkom']]"
-      [labels]="['Ext. maturita z CJ', 'Ext. mat. z matematiky',  'SCIO z matematiky', 'SCIO VŠP', 'Celkové body']"
-      [type]="'bar'"
-      [legend]="false"
-    ></app-chart>
-    <app-chart
-      *ngIf="admission.Body_celkom || admission.Body"
-      [title]="'Body v prijímacom konaní'"
-      [data]="[admission.Body, (admission.Body_celkom - admission.Body) | number:'2.2-2']"
-      [labels]="['Body zo strednej školy', 'Doplňkové body']"
-      [type]="'pie'"
-      [legend]="false"
-    ></app-chart>
-  </div>
-</div>
-
-<h2 id="high-school" padding>Stredná škola</h2>
-
-<div class="row">
-  <div class="col-lg-6">
-    <table class="table table-borderless table-sm">
-      <thead>
-        <tr>
-          <th colspan="2" scope="col">Informácie o škole</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">Kód školy</th>
-          <td>{{ school ? school.kod_kodsko : 'Neuvedené' }}</td>
-        </tr>
-        <tr>
-          <th scope="row">Názov</th>
-          <td>{{ admission['Stredná_škola_1'] }}</td>
-        </tr>
-        <tr>
-          <th scope="row">Adresa</th>
-          <td>{{ admission['Stredná_škola_adresa'] }}</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <table class="table table-borderless table-sm">
-      <thead>
-        <tr>
-          <th colspan="2" scope="col">Študent</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">Študijný odbor</th>
-          <td>{{ admission['Odbor_na_SŠ'] }} ({{ admission['Odbor_SŠ'] }})</td>
-        </tr>
-        <tr>
-          <th scope="row">Priemer na strednej škole</th>
-          <td>{{ admission['Priemer_SŠ'] ? admission['Priemer_SŠ'] : 'Neuvedené' }}</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <app-map *ngIf="school" [markers]="[school]" [height]="400" [showSettingsButton]="false"></app-map>
-  </div>
-  <div class="col-lg-6">
-    <app-chart
-      *ngIf="school"
-      [title]="'Hodnoty za jednotlivé ukazovatele školy'"
-      [data]="[pointers.Mat_SJ, pointers.Mat_M, pointers.Mat_AJB1, pointers.Mat_AJB2]"
-      [labels]="['Slovenský jazyk', 'Matematika', 'Anglický jazyk B1', 'Anglický jazyk B2']"
-      [type]="'horizontalBar'"
-      [legend]="false"
-    ></app-chart>
-  </div>
-</div>
-
-<h2 id="other-admissions" padding>Všetky prihlášky tohto uchádzača</h2>
-
-<table mat-table matSort [dataSource]="otherAdmissions" full-width>
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Meno">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Meno </th>
-    <td mat-cell *matCellDef="let element"> {{element.Meno}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Priezvisko">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Priezvisko </th>
-    <td mat-cell *matCellDef="let element"> {{element.Priezvisko}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="E_mail">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-    <td mat-cell *matCellDef="let element"> {{element.E_mail}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="OBDOBIE">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Školský rok </th>
-    <td mat-cell *matCellDef="let element"> {{element.OBDOBIE}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Program">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Program </th>
-    <td mat-cell *matCellDef="let element"> {{element.Program}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Rozh" stickyEnd>
-    <th mat-header-cell *matHeaderCellDef> Rozhodnutie o prijatí </th>
-    <td [ngStyle]="{ color: element.Rozh > 9 && element.Rozh < 20 ? 'green' : 'red' }" mat-cell *matCellDef="let element">
-      {{ isAccepted(element.Rozh) }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="created_at">
-    <th mat-header-cell *matHeaderCellDef> Akcie </th>
-    <td mat-cell *matCellDef="let element">
-      <button class="btn btn-primary" [routerLink]="['/admissions', element.stupen_studia == 'Bakalársky' ? 'bachelor' : 'master', element.id]" no-margin>Detail</button>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedAdmissionsColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedAdmissionsColumns;"></tr>
-</table>
-<mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons #paginator></mat-paginator>
+<app-general-info [admission]="admission"></app-general-info>
+<app-high-school-info [admission]="admission" [school]="school" [pointers]="pointers"></app-high-school-info>
+<app-other-admissions [admissions]="otherAdmissions"></app-other-admissions>
