scss refactoring h2.section-header to general file

--- a/bakalarka-frontend/src/app/pages/admissions/admission/components/high-school-info/high-school-info.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admission/components/high-school-info/high-school-info.component.html
@@ -1,4 +1,4 @@
-<h2 id="high-school" padding>Stredná škola</h2>
+<h2 id="high-school" class="section-header" padding>Stredná škola</h2>
 
 <div class="row">
   <div class="col-lg-6">
