--- a/bakalarka-frontend/src/app/pages/admissions/admission/components/other-admissions/other-admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admission/components/other-admissions/other-admissions.component.html
@@ -1,4 +1,4 @@
-<h2 id="other-admissions" padding>Všetky prihlášky tohto uchádzača</h2>
+<h2 id="other-admissions" class="section-header" padding>Všetky prihlášky tohto uchádzača</h2>
 
 <table *ngIf="showTable" mat-table matSort [dataSource]="admissions" full-width>
   <ng-container matColumnDef="id">
