--- a/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
@@ -121,7 +121,7 @@
   ŠTATISTIKY
 -->
 
-<h2 id="statistics" padding>Štatistiky</h2>
+<h2 id="statistics" class="section-header" padding>Štatistiky</h2>
 
 <div class="row">
   <div class="col-lg-6 col-sm-6">
@@ -179,7 +179,7 @@
   REBRÍČEK ŠKÔL
 -->
 
-<h2 id="schools-leaderboard" padding>Rebríček škôl</h2>
+<h2 id="schools-leaderboard" class="section-header" padding>Rebríček škôl</h2>
 
 <div class="schoolsQualityBar">
   <table mat-table #schoolsSort="matSort" matSort [dataSource]="schools" full-width>
