--- a/bakalarka-frontend/src/app/pages/admissions/admissions-comparison/admissions-comparison.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-comparison/admissions-comparison.component.html
@@ -76,7 +76,7 @@
   </div>
 </div>
 
-<h2 id="ratios" padding>Pomery nastúpených a prijatých študentov</h2>
+<h2 id="ratios" class="section-header" padding>Pomery nastúpených a prijatých študentov</h2>
 
 <h3 id="bachelor&master">Bakalárske + inžinierske štúdium</h3>
 <hr>
@@ -153,7 +153,7 @@
   </tbody>
 </table>
 
-<h2 id="counts-per-year" padding>Počty prihlášok na jednotlivé študijné programy za jednotlivé roky (Bakalársky stupeň)</h2>
+<h2 id="counts-per-year" class="section-header" padding>Počty prihlášok na jednotlivé študijné programy za jednotlivé roky (Bakalársky stupeň)</h2>
 
 <table class="table">
   <thead>
