--- a/bakalarka-frontend/src/app/pages/admissions/components/schools-overview/schools-overview.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/components/schools-overview/schools-overview.component.html
@@ -1,4 +1,4 @@
-<h2 id="schools-overview" class="display-4" padding>Prehľad škôl v krajine</h2>
+<h2 id="schools-overview" class="section-header" padding>Prehľad škôl v krajine</h2>
 
 <div class="schoolMap">
 
