--- a/bakalarka-frontend/src/app/pages/admissions/components/students-origin/students-origin.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/components/students-origin/students-origin.component.html
@@ -1,4 +1,4 @@
-<h2 id="origin" class="display-4" padding>Pôvod študentov</h2>
+<h2 id="origin" class="section-header" padding>Pôvod študentov</h2>
 
 <app-map
   [markers]="admissions"
