--- a/bakalarka-frontend/src/app/pages/admissions/admissions-master/admissions-master.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-master/admissions-master.component.html
@@ -118,7 +118,7 @@
   ŠTATISTIKY
 -->
 
-<h2 id="statistics" padding>Štatistiky</h2>
+<h2 id="statistics" class="section-header" padding>Štatistiky</h2>
 
 <div class="row">
   <div class="col-lg-6 col-sm-6">
@@ -145,7 +145,7 @@
   OSTATNĚ VYSOKĚ ŠKOLY
 -->
 
-<h2 id="statistics" padding>Ostatné vysoké školy</h2>
+<h2 id="other-high-schools" class="section-header" padding>Ostatné vysoké školy</h2>
 
 <table class="table table-sm">
   <thead>
