--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
@@ -113,7 +113,8 @@
 
 </div>
 
-<h2 id="general-info" class="display-4" padding>Všeobecné informácie</h2>
+<h2 id="general-info" class="section-header" padding>Všeobecné informácie</h2>
+
 <div class="row">
   <div class="col-lg-6">
     <app-chart
