--- a/bakalarka-frontend/src/app/pages/admissions/components/abroad-students/abroad-students.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/components/abroad-students/abroad-students.component.html
@@ -1,4 +1,4 @@
-<h2 id="abroad-students" class="display-4" padding>Zahraničné prihlášky</h2>
+<h2 id="abroad-students" class="section-header" padding>Zahraničné prihlášky</h2>
 
 <div class="row">
   <div class="col-lg-6">
