--- a/bakalarka-frontend/src/app/pages/admissions/components/regions/regions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/components/regions/regions.component.html
@@ -1,4 +1,4 @@
-<h2 id="regions" class="display-4" padding>Regióny</h2>
+<h2 id="regions" class="section-header" padding>Regióny</h2>
 
 <div class="row">
   <div class="col-lg-5">
