--- a/bakalarka-frontend/src/styles.scss
+++ b/bakalarka-frontend/src/styles.scss
@@ -7,6 +7,11 @@ body, html {
     scroll-behavior: smooth;
 }
 
+h2.section-header {
+  margin: 16px -16px;
+  background-color: #e9ecef;
+}
+
 body {
     margin: 0;
     font-family: Roboto,Helvetica,Arial,sans-serif;
