--- a/bakalarka-frontend/src/app/app.component.scss
+++ b/bakalarka-frontend/src/app/app.component.scss
@@ -1,16 +1,22 @@
 .main-content {
-    padding-left: 185px;
-    
-    &.unauthorized {
-        padding-left: 0;
-        display: flex;
-        width: 100%;
-        height: 100%;
-        align-items: center;
-        justify-content: center;
-    }
+  padding-left: 185px;
+
+  &.unauthorized {
+    padding-left: 0;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 main {
-    padding-top: 65px;
+  padding-top: 65px;
+}
+
+@media all and (max-width: 768px) {
+  .main-content {
+    padding-left: 0;
+  }
 }
