--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
 <div>
 
   <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">FIIT AV</a>
+    <a class="navbar-brand pl-2" href="#">FIIT AV</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
