--- a/bakalarka-frontend/src/app/core/header/header.component.scss
+++ b/bakalarka-frontend/src/app/core/header/header.component.scss
@@ -7,8 +7,8 @@
   cursor: pointer;
 }
 
-// @media all and (min-width: 991) {
-  .logout {
-    padding-left: 30px;
+@media all and (max-width: 768px) {
+  .navbar {
+    padding-left: 0;
   }
-// }
+}
