--- a/bakalarka-frontend/src/app/pages/admissions/admissions-master/admissions-master.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-master/admissions-master.component.html
@@ -114,54 +114,5 @@
 </table>
 <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons #paginator></mat-paginator>
 
-<!--
-  ŠTATISTIKY
--->
-
-<h2 id="statistics" class="section-header" padding>Štatistiky</h2>
-
-<div class="row">
-  <div class="col-lg-6 col-sm-6">
-      <app-time-chart
-      *ngIf="admissionsTimes.length"
-      [title]="'Dátumy zadávania jednotlivých prihlášok'"
-      [data]="admissionsTimes"
-      [type]="'line'"
-      [legend]="false"
-    ></app-time-chart>
-  </div>
-  <div class="col-lg-6 col-sm-6">
-      <app-time-chart
-      *ngIf="admissionsPerDay.length"
-      [title]="'Počet prihlášok za konkrétne dni'"
-      [data]="admissionsPerDay"
-      [type]="'line'"
-      [legend]="false"
-    ></app-time-chart>
-  </div>
-</div>
-
-<!--
-  OSTATNĚ VYSOKĚ ŠKOLY
--->
-
-<h2 id="other-high-schools" class="section-header" padding>Ostatné vysoké školy</h2>
-
-<table class="table table-sm">
-  <thead>
-    <tr>
-      <th scope="col">Fakulta</th>
-      <th scope="col">Počet prihlášok</th>
-      <th scope="col">Priemerný počet bodov</th>
-      <th scope="col">Medián bodov</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let uni of universities">
-      <th scope="row">{{ uni['Absolvovaná_VŠ'] ? uni['Absolvovaná_VŠ'] : 'Nešpecifikované' }}</th>
-      <td>{{ uni.count }}</td>
-      <td>{{ uni.mean | number : '1.2-2' }}</td>
-      <td>{{ uni.median }}</td>
-    </tr>
-  </tbody>
-</table>
+<app-statistics-charts *ngIf="admissions" [admissions]="admissions.data"></app-statistics-charts>
+<app-other-universities-info [universities]="universities"></app-other-universities-info>
