admissions bachelor section refactored to components

--- a/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
@@ -117,79 +117,5 @@
 </table>
 <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons #paginator></mat-paginator>
 
-<!--
-  ŠTATISTIKY
--->
-
-<h2 id="statistics" class="section-header" padding>Štatistiky</h2>
-
-<div class="row">
-  <div class="col-lg-6 col-sm-6">
-      <app-time-chart
-      *ngIf="admissionsTimes.length"
-      [title]="'Dátumy zadávania jednotlivých prihlášok'"
-      [data]="admissionsTimes"
-      [type]="'line'"
-      [legend]="false"
-    ></app-time-chart>
-  </div>
-  <div class="col-lg-6 col-sm-6">
-      <app-time-chart
-      *ngIf="admissionsPerDay.length"
-      [title]="'Počet prihlášok za konkrétne dni'"
-      [data]="admissionsPerDay"
-      [type]="'line'"
-      [legend]="false"
-    ></app-time-chart>
-  </div>
-</div>
-
-<div class="groups" margin-top>
-  <label for="numberOfGroups">Počet skupín</label>
-  <input
-    id="numberOfGroups"
-    [(ngModel)]="numberOfGroups"
-    class="form-control"
-    type="number"
-    name="numberOfGroups"
-    min="1"
-  >
-  <div class="row" padding-top>
-    <div class="col-lg-6 col-md-12">
-      <app-statistics-table
-        *ngIf="admissions"
-        [numberOfGroups]="numberOfGroups"
-        [data]="filteredAdmissions"
-        [type]="'groups'"
-      ></app-statistics-table>
-    </div>
-
-    <div class="col-lg-6 col-md-12">
-      <app-statistics-table
-        *ngIf="admissions"
-        [numberOfGroups]="numberOfGroups"
-        [data]="filteredAdmissions"
-        [type]="'groups'"
-      ></app-statistics-table>
-    </div>
-  </div>
-</div>
-
-<!--
-  REBRÍČEK ŠKÔL
--->
-
-<h2 id="schools-leaderboard" class="section-header" padding>Rebríček škôl</h2>
-
-<div class="schoolsQualityBar">
-  <table mat-table #schoolsSort="matSort" matSort [dataSource]="schools" full-width>
-    <ng-container [matColumnDef]="column" *ngFor="let column of displayedSchoolsColumns">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
-      <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedSchoolsColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedSchoolsColumns;"></tr>
-  </table>
-  <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons #schoolsPaginator></mat-paginator>
-</div>
+<app-statistics [admissions]="filteredAdmissions"></app-statistics>
+<app-schools-leaderboard [admissions]="filteredAdmissions" [schools]="schools"></app-schools-leaderboard>
