--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -30,6 +30,9 @@
             <a class="dropdown-item" routerLink="/admissions/management">Manažment prijímacieho konania</a>
           </div>
         </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/students">Študenti</a>
+        </li>
 
 
         <li class="nav-item dropdown" routerLinkActive="active">
