priklad pre karin

--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -30,8 +30,16 @@
             <a class="dropdown-item" routerLink="/admissions/management">Manažment prijímacieho konania</a>
           </div>
         </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/students">Študenti</a>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Študenti
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" routerLink="/students">Vseobecne</a>
+            <a class="dropdown-item" routerLink="/demo">Demo</a>
+          </div>
         </li>
 
 
