--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -38,7 +38,8 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" routerLink="/students">Vseobecne</a>
-            <a class="dropdown-item" routerLink="/demo">Demo</a>
+            <a class="dropdown-item" routerLink="/students/demo">Demo</a>
+            <a class="dropdown-item" routerLink="/students/prediction">Predikcie</a>
           </div>
         </li>
 
