prve pokusy prepojenia s pythonom

--- a/bakalarka-frontend/src/app/pages/students/prediction/prediction.component.html
+++ b/bakalarka-frontend/src/app/pages/students/prediction/prediction.component.html
@@ -1,3 +1,12 @@
 <p>
   prediction works!
 </p>
+<button
+mat-raised-button
+color="primary"
+(click)="communicatePython()"
+>
+Komunikuj s Pythonom
+</button>
+<h3>Textik: {{ text }}</h3>
+<p>poznamka: {{ pozn }}</p>
