--- a/bakalarka-frontend/src/app/pages/students/prediction/prediction.component.html
+++ b/bakalarka-frontend/src/app/pages/students/prediction/prediction.component.html
@@ -1,3 +1,33 @@
+<h1 class="display-3">Predikcie</h1>
+
+<form>
+  <mat-form-field>
+    <mat-label>Rok nastupu: </mat-label>
+    <input matInput type ="text" placeholder="RRRR-RRRR" ng-model="school_year"/>
+  </mat-form-field>
+  <br>
+  <mat-form-field>
+    <mat-label>Predmet: </mat-label>
+    <mat-select [(ngModel)]="selected_subject">
+      <mat-option *ngFor="let subject of imported_models" [value]="subject">
+        {{ subject }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>  
+</form>
+
+<button
+mat-raised-button
+color="primary"
+(click)="start_prediction()"
+>
+SPUSTI PREDIKCIU
+</button>
+
+
+<p> rok nastupu: {{ school_year }} </p>
+<p> predmet: {{ selected_subject }} </p>
+
 <p>
   prediction works!
 </p>
